
    HADOOP-7101. UserGroupInformation.getCurrentUser() fails when called from
    non-Hadoop JAAS context. (todd, backported by suresh)

    MAPREDUCE-4463. Fix job recovery failures which were caused by HDFS
    permission issues since the token file was being read as the user who
    submitted the job rather than JobTracker user. (tomwhite, acmurthy via
    acmurthy) 

Release 1.1.2 - 2013.01.30

  INCOMPATIBLE CHANGES

  NEW FEATURES

    MAPREDUCE-4397. Introduce HADOOP_SECURITY_CONF_DIR for task-controller.
    (Yu Gao via llu)

    HADOOP-8561. Introduce HADOOP_PROXY_USER for secure impersonation in child
    hadoop client processes. (Yu Gao via llu)

  IMPROVEMENTS

    HDFS-4252. Improve confusing log message that prints exception when editlog 
    read is completed. (Jing Zhao via suresh)

    HADOOP-8567. Port conf servlet to dump running configuration to branch 1.x.
    (Jing Zhao via suresh)

  BUG FIXES

    HADOOP-8419. Fixed GzipCode NPE reset for IBM JDK. (Yu Li via eyang)

    MAPREDUCE-4272. SortedRanges.Range#compareTo is not spec compliant.
    (Yu Gao via llu)

    HADOOP-9051 Fix ant clean/test with circular symlinks in build dir. (llu)

    MAPREDUCE-4396. Port support private distributed cache to
    LocalJobRunner from branch-1-win. (Yu Gao via eyang)

    HADOOP-8418. Update UGI Principal classes name for running with
    IBM JDK on 64 bits Windows.  (Yu Gao via eyang)

    MAPREDUCE-4798. Updated TestJobHistoryServer test case for startup
    race conditions.  (Sam Liu via eyang)

    HDFS-3727. When using SPNEGO, NN should not try to log in using KSSL
    principal. (atm)

    MAPREDUCE-2374. "Text File Busy" errors launching MR tasks. (Andy Isaacson
    via atm)

    HDFS-4208. NameNode could be stuck in SafeMode due to never-created
    blocks. (Brandon Li via suresh)

    HADOOP-9111. Change some JUnit 3 tests to JUnit 4 so that @Ignore tests can
    be run with ant 1.8.x.  (Jing Zhao via szetszwo)
