@@ -570,6 +570,9 @@ Release 1.2.0 - unreleased
     submitted the job rather than JobTracker user. (tomwhite, acmurthy via
     acmurthy) 
 
+    MAPREDUCE-5131. Fix handling of job monitoring APIs during JobTracker
+    restart. (acmurthy) 
+
 Release 1.1.2 - 2013.01.30
 
   INCOMPATIBLE CHANGES
